<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="609dp"
        android:layout_height="729dp"
        android:scaleType="centerCrop"
        android:src="@drawable/startphoto"

        />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="*">
        <TableRow>

            <TextView
                style="@style/mystyle"
                android:text="User Name :       "
                android:textSize="12pt" />

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="200dp"
                android:hint="@string/user_name"
                android:textColorHint="@color/white"
                style="@style/mystyle"


                android:minHeight="48dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_marginTop="30dp"
                android:text="Password :       "

                android:textColor="@color/white"
                android:textSize="12pt" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="200dp"
                android:layout_marginTop="30dp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:inputType="textPassword"

                android:minHeight="48dp" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/RememberPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/remember_password"
                android:textColor="@color/white"/>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/buttonSignIn"
                android:text="Log IN"
                android:layout_marginTop="30dp"
                android:onClick="LogInClick"
                />

        </TableRow>


    </TableLayout>




</FrameLayout>